# CENet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  evaluate_iou.py  infer.py  infer_poss.py  kitti.sh  package.xml  pos.sh  run.txt  setup.py  temp.py  train.py  train_poss.py  ts_infer.py  visualize.py
assert/: finalspeed.md
asssert/: finalspeed.md
common/: laserscan.py  posslaserscan.py  posslaserscanvis.py
config/: senet-1024p.yml
config/arch/: fusion-512.yml  poss-fid.yml  poss.yml  senet-1024p.yml  senet-2048p.yml  senet-512.yml
config/labels/: semantic-kitti.yaml  semantic-poss.yaml
dataset/kitti/: parser.py
dataset/poss/.ipynb_checkpoints/: parser-checkpoint.py
modules/: Fid.py  HarDNet.py  ResNet.py  adam_policy.py  boundary_loss.py  trainer.py  trainer_poss.py  user.py  user_poss.py  utils.py
modules/losses/: boundary_loss.py
modules/network/: Mask2Former.py  ResNet.py
postproc/: KNN.py
scripts/: infer.py  infer_ros.py  view_range_image.py
src/: visualize.py
src/common/: laserscan.py  laserscan_orig.py  laserscan_ros.py  laserscanvis.py
src/dataset/kitti/: parser_ros.py
src/dataset/kitti/.ipynb_checkpoints/: parser-checkpoint.py
src/modules/: user.py  user_ros.py
src/modules/scheduler/: cosine.py
src/postproc/: __init__.py
